# Multiscale-KMC

./: .gitignore  Analyze_STS.m  CMakeLists.txt  FauxInputRead.m  FauxInputRead2.m  InputRead.m  KMC_STS.m  KMC_TTS.m  LICENSE.md  MSA_debug.txt  Main_macro.m  ODE_STS.m  ODE_TTS.m  Post_process_sampledata.m  Post_process_singlerun.m  README.md  STS_Main.m  build.sh  cov_calc.m  dev.sh  micro_scale.m  network_input.m  props.m  props2.m  rxn_rates.m  strsplit.m
Cpp_files/: STS_sim.cpp  TTS_sim.cpp  Traj_stats.cpp  in_file_reader.cpp  myHeader.h  run_sim_par.cpp  run_sim_ser.cpp
Cpp_port/: MSA-KMC.x  circle.cpp  input.txt  input_file_read.cpp  kmc_SA.txt  kmc_reps_mpi.cpp  kmc_specs.txt  kmc_traj.cpp  makefile  mpi_cpp.qs  myHeader.h  network.cpp  output.txt  readme.md  sensitivities.txt  spec_avgs.txt
KMC_STS/: KMC_STS.m  Read_KMCSTS_output.m
KMC_TTS/: Analyze_outputs_steadystate.m  Analyze_outputs_trans.m  Directory.txt  KMC_TTS.m  MSA_debug.txt  Plot_analysis.m  Read_KMCTTS_output.m  micro_scale.m  readme.md
KMC_TTS_Matlab/: Analyze_outputs_trans.m
MPI_run/: makefile  readme.md  submit_mpi.qs
Network/: FauxInputRead.m  FauxInputRead2.asv  FauxInputRead2.m  InputRead.m  InputRead_ABC.m  InputRead_ABcat.m  MSA_input.txt
ODE/: ODE_STS.asv  ODE_STS.m  ODE_TTS.m  STS_ODE.m  rate_eqns.m
SampleSystems/: MSA_input_catalst.txt
Serial_run/: makefile  network.in  readme.md  submit_serial.qs
TTS_port/: STS_sim.cpp  Traj_stats.cpp  in_file_reader.cpp  makefile  makefile_parallel  makefile_serial  myHeader.h  network.in  run_sim_par.cpp  run_sim_ser.cpp  submit_mpi.qs  submit_serial.qs
example/: network.in
mpi/: makefile  (+1 more)
(+25 files in other folders)
